# winInterview-windows-OS

./: .env.development  .env.production  .env.staging  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  SETUP-WINDOWS.md  TIERS.md  desiciones.txt  docs.txt  explicacion.txt  implementation_plan.md  index.html  info.txt  landing-opencode.html  opencode.json  package-lock.json  package.json  pnpm-lock.yaml  resumen2.txt  sesion.txt  start-backend.ps1  start-frontend.ps1  sugerencias.txt
.claude/: settings.json
.github/workflows/: release.yml
.opencode/plans/: system-tiers.md  tiers-fixes.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/src/backend/: config.py  context.py  convex_client.py  dependencies.py  main.py  plan_gate.py  tiers.py  ws_manager.py
backend/src/backend/agent/: deepgram.py
backend/src/backend/audio/: capture.py  service.py
backend/src/backend/auth/: clerk.py
backend/src/backend/data/: prompts.json
backend/src/backend/llm/: client.py  deepseek.py  nvidia.py  prompt.py  protocol.py  vision.py
backend/src/backend/routers/: prompts.py  screens.py
backend/src/backend/screen/: capture.py
backend/src/backend/stt/: transcriber.py
backend/src/backend/ws/: command_parser.py  commands.py  handler.py  message_types.py  security.py  session.py
convex/: auth.config.ts  backend.ts  constants.ts  crons.ts  http.ts  list_users.ts  paddle.ts  prompts.ts  quotas.ts  schema.ts  users.ts  webhooks.ts
convex/_generated/: api.d.ts
convex/lib/: userKey.ts
errores/: opinion.txt
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  test_jpeg.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs  main_perf.rs  main_test.rs
src/components/: AudioSourceSelector.tsx  AuthGate.tsx  Controls.tsx  EnsureConvexUser.tsx  KeyLoginForm.tsx  LanguageSelector.tsx  Overlay.tsx  PricingModal.tsx  PromptEditor.tsx  QuestionCounter.tsx  Response.tsx  ScreenPanel.tsx  SessionTimer.tsx  StatusBar.tsx  Toast.tsx  Transcription.tsx  UpdateBanner.tsx
src/constants/: links.ts  ws.ts
src/hooks/: useAppAuth.ts  useCaptureQuota.ts  useCheckout.ts  useFeatureGate.ts  usePendingUpgrade.ts  usePlanSync.ts  usePromptSync.ts  useScreenCapture.ts  useTranscriptionCountdown.ts  useTranslation.ts  useUpdater.ts  useWebSocket.ts
src/i18n/: translations.ts
src/providers/: AuthProvider.tsx
src/stores/: interview.ts
src/stores/slices/: authSlice.ts  planSlice.ts  screenSlice.ts  sessionSlice.ts  settingsSlice.ts  uiSlice.ts
src/styles/: tokens.css
updates-server/: .dockerignore  Dockerfile  main.py  requirements.txt
