[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "deepgram-sdk (>=7.2.0,<8.0.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "pyaudio (>=0.2.14,<0.3.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "uvicorn[standard] (>=0.48.0,<0.49.0)",
    "websockets (>=16.0,<17.0.0)",
    "setuptools (>=82.0.1,<83.0.0)",
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[tool.poetry.scripts]
dev = "backend.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
