[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "deepgram-sdk (>=7.2.0,<8.0.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "sounddevice (>=0.4.6,<0.5.0)",
    "soundcard (>=0.4.3,<0.5.0)",
    "numpy (>=1.24.0,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "uvicorn[standard] (>=0.48.0,<0.49.0)",
    "websockets (>=16.0,<17.0.0)",
    "setuptools (>=80.0.1,<83.0.0)",
    "openai (>=1.0.0,<2.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "cryptography (>=49.0.0,<50.0.0)",
    "aiohttp (>=3.9.0,<4.0.0)",
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[tool.poetry.scripts]
dev = "backend.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
